--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     // Since we are going to use databases
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     //compile("org.springframework.data:spring-data-rest-hal-browser")
+    compile("org.springframework.boot:spring-boot-starter-security")
     runtime("com.h2database:h2")
 
     
